[package]
name = "playfair_cipher"
authors = ["Stefan Dörig <sdoerig@bluewin.ch>"]
version = "0.3.5"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Implementation of Playfair, Two square and Four square cipher"
homepage = "https://github.com/sdoerig/playfair_cipher"
repository = "https://github.com/sdoerig/playfair_cipher"
keywords = ["Cipher", "Playfair", "Cryptography", "Four_square", "Two_square"]
exclude = [
    ".github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
